examples/fail/semantic/int_literal_out_of_range_hex.bina
// EXPECT_SEMANTIC_ERROR: out of range for uint8
fn main() -> int {
    let x: uint8 = 0x100;
    return 0;
}
